src/main/java/com/example/pismobank/errors/TransactionRequirementNotFoundException.java
package com.example.pismobank.errors;

public class TransactionRequirementNotFoundException extends RuntimeException {
}
